refactor: Replace Lombok @Data with @Getter and @Setter, remove redundant imports, and externalize CORS allowed origins to application properties.